crates/bamltype/tests/ui/tuple_field.stderr
error: tuple types are not supported in BAML outputs; hint: use a struct with named fields or a list
 --> tests/ui/tuple_field.rs:5:11
  |
5 |     pair: (i32, i32),
  |           ^^^^^^^^^^
